preliminary node-based web ui (with editing)

--- a/web/templates/edit.html
+++ b/web/templates/edit.html
@@ -1,10 +1,1 @@
-<html>
-{{ $cue := index .show.Cues .cueIndex }}
-<form>
-  <label>
-    Name
-    <input type="text" name="name" value="{{ $cue.Name }}" />
-  </label>
-</form>
-{{ printf "%s" (toJSON $cue) }}
-</html>
+{{ template "node.html" . }}
