--- a/web/templates/node.html
+++ b/web/templates/node.html
@@ -4,14 +4,18 @@
   }
 </style>
 {{ $root := . }}
-<form id="form" method="post">
+<form method="post">
   <label>
     Name
-    <input type="text" name="name" value="{{ .nodeName }}" readonly />
+    <input type="text" name="name" value="{{ .nodeName }}" />
+  </label>
+  <label>
+    Description
+    <input type="text" name="description" value="{{ .node.GetDescription }}" />
   </label>
   <label>
     Type
-    <select name="type" id="type">
+    <select name="type">
       {{ range $i, $t := .availableNodeTypeNames }}
       <option value="{{ $t }}"{{ if eq $root.node.TypeName $t }} selected {{ end }}>{{ $t }}</option>
       {{ end }}
@@ -20,7 +24,7 @@
   {{ if eq .node.TypeName "nyiyui.ca/halation/node.SetState" }}
     <label>
       State Type
-      <select name="state-type" id="state-type">
+      <select name="state-type">
         <option value="">None</option>
         {{ range $i, $t := .availableStateTypeNames }}
         <option value="{{ $t }}"{{ if and $root.node.SG.State (eq $root.node.SG.State.TypeName $t) }} selected {{ end }}>{{ $t }}</option>
@@ -29,11 +33,11 @@
     </label>
     <label>
       State
-      <textarea id="state" name="state" rows="10" cols="40">{{ printf "%s" (toJSON .node.SG.State) }}</textarea>
+      <textarea name="state" rows="10" cols="40">{{ printf "%s" (toJSON .node.SG.State) }}</textarea>
     </label>
     <label>
       Gradient Type
-      <select name="gradient-type" id="gradient-type">
+      <select name="gradient-type">
         <option value="">None</option>
         {{ range $i, $t := .availableGradientTypeNames }}
         <option value="{{ $t }}"{{ if and $root.node.SG.Gradient (eq $root.node.SG.Gradient.TypeName $t) }} selected {{ end }}>{{ $t }}</option>
@@ -42,19 +46,25 @@
     </label>
     <label>
       Gradient
-      <textarea id="gradient" name="gradient" rows="10" cols="40">{{ printf "%s" (toJSON .node.SG.Gradient) }}</textarea>
+      <textarea name="gradient" rows="10" cols="40">{{ printf "%s" (toJSON .node.SG.Gradient) }}</textarea>
     </label>
   {{ end }}
   <label>
     Listens To
-    <textarea id="listens-to" name="listens-to" rows="10" cols="40">{{ printf "%s" (toJSON .node.GetListensTo) }}</textarea>
+    <textarea name="listens-to" rows="10" cols="40">{{ printf "%s" (toJSON .node.GetListensTo) }}</textarea>
   </label>
+  {{ if .htmx }}
+  <button hx-post="/edit?node-name={{ .nodeName }}" hx-target="closest .popup">
+    Save
+  </button>
+  {{ else }}
   <input type="submit" value="Save"/>
-  {{ if .saved }}
-  <span id="saved">Saved.</span>
   {{ end }}
-  {{/* TODO: remove "Saved." notice the moment the form is edited. */}}
+  {{/* TODO: saved notification */}}
 </form>
+<details>
+  <summary>Raw JSON</summary>
 <pre>
 {{ printf "%s" (toJSON .node) }}
 </pre>
+</details>
