--- a/web/static/base.css
+++ b/web/static/base.css
@@ -18,11 +18,23 @@ nav {
 .popup {
   position: absolute;
   background: #eee;
-  padding: 8px;
   box-shadow: 0px 0px 5px 1px black;
   border-radius: 5px;
 }
 
+.popup-content {
+  padding: 8px;
+}
+
+.popup > nav {
+  padding: 4px;
+  padding-left: 32px;
+}
+
 .popup-backburner {
   display: none;
+}
+
+.nav-right {
+  float: right;
 }
