--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -1,3 +1,6 @@
+{{ if .htmx }}
+{{ template "content" . }}
+{{ else }}
  <!DOCTYPE html>
  <html>
    <head>
@@ -13,3 +16,4 @@
      </div>
    </body>
  </html>
+ {{ end }}
