move draggable JS into discrete file

--- a/web/templates/node.html
+++ b/web/templates/node.html
@@ -16,44 +16,13 @@
   <button class="nav-right" id="close-edit-{{ .nodeName }}">Close</button>
 </nav>
 <script type="module">
+  import { morphIntoDraggable } from "/static/popup.js";
+
   let b = document.getElementById("close-edit-{{ .nodeName }}");
   b.addEventListener("click", (e) => {
     b.parentNode.parentNode.classList.add("popup-backburner");
   });
   morphIntoDraggable(b.parentNode.parentNode, b.parentNode);
-  
-  function morphIntoDraggable(elem, handle) {
-    let pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
-    handle.addEventListener("mousedown", dragMouseDown);
-  
-    function dragMouseDown(e) {
-      e.preventDefault();
-      // get the mouse cursor position at startup:
-      pos3 = e.clientX;
-      pos4 = e.clientY;
-      document.onmouseup = closeDragElement;
-      // call a function whenever the cursor moves:
-      document.onmousemove = elementDrag;
-    }
-  
-    function elementDrag(e) {
-      e.preventDefault();
-      // calculate the new cursor position:
-      pos1 = pos3 - e.clientX;
-      pos2 = pos4 - e.clientY;
-      pos3 = e.clientX;
-      pos4 = e.clientY;
-      // set the element's new position:
-      elem.style.top = (elem.offsetTop - pos2) + "px";
-      elem.style.left = (elem.offsetLeft - pos1) + "px";
-    }
-  
-    function closeDragElement() {
-      // stop moving when mouse button is released:
-      document.onmouseup = null;
-      document.onmousemove = null;
-    }
-  }
 </script>
 {{ end }}
 <div class="popup-content">
