--- a/web/static/base.css
+++ b/web/static/base.css
@@ -27,8 +27,9 @@ nav {
 }
 
 .popup > nav {
+  background-size: 1.2em;
   padding: 4px;
-  padding-left: 32px;
+  padding-left: calc(1.2em + 4px);
 }
 
 .popup-backburner {
