web: add activate route

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -5,7 +5,8 @@
  <html>
    <head>
      <link rel="stylesheet" href="/static/base.css" />
-     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
+     <script src="/static/htmx.org@1.9.10.js"></script>
+     <!-- <script src="https://unpkg.com/htmx.org@1.9.10"></script> -->
    </head>
    <body>
      <nav>
