--- a/web/templates/nodemap.html
+++ b/web/templates/nodemap.html
@@ -5,15 +5,22 @@
   {{ $node := index $.nm.Nodes $name }}
   <div class="node">
     <section>
+      {{ if $.root }}
+      {{ index $.cuelist.GenOpposite $name }}
+      {{ end }}
       {{ if $node.GetDescription }}
         {{ $node.GetDescription }}
       {{ else }}
       <code>{{ $name }}</code>
       {{ end }}
-      <br />
       <!-- Type: <code>{{ $node.TypeName }}</code> -->
       Short: <code>{{ $node }}</code>
       <br />
+      <button 
+        hx-post="/activate?node-name={{ $name }}" 
+        hx-swap="none"
+        class="node-activate"
+      >Activate</button>
       <button 
         hx-get="/edit?node-name={{ $name }}" 
         hx-target="#node-i{{ $i }}-modal"
@@ -25,6 +32,7 @@
     </section>
     {{ template "submap" (dict
       "nm" $.nm
+      "cuelist" $.cuelist
       "names" (index $.listeners $name)
       "listeners" $.listeners
     ) }}
@@ -58,7 +66,7 @@
 }
 </style>
 <div id="map" class="map">
-  {{ template "submap" (dict "nm" .nr.NM "names" .roots "listeners" .listeners) }}
+  {{ template "submap" (dict "nm" .nr.NM "cuelist" $.cuelist "names" .roots "listeners" .listeners "root" true) }}
 </div>
 <script type="module">
   let latest;
