--- a/web/templates/nodemap.html
+++ b/web/templates/nodemap.html
@@ -33,8 +33,8 @@
     {{ template "submap" (dict
       "nm" $.nm
       "cuelist" $.cuelist
-      "names" (index $.listeners $name)
-      "listeners" $.listeners
+      "names" (index $.pm $name)
+      "pm" $.pm
     ) }}
     {{/* detect loops */}}
   </div>
@@ -66,7 +66,7 @@
 }
 </style>
 <div id="map" class="map">
-  {{ template "submap" (dict "nm" .nr.NM "cuelist" $.cuelist "names" .roots "listeners" .listeners "root" true) }}
+  {{ template "submap" (dict "nm" .nr.NM "cuelist" $.cuelist "names" .roots "pm" .pm "root" true) }}
 </div>
 <script type="module">
   let latest;
